2020-11-09  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: change default HTTP client side timeout from 240s to 30s.
     
2020-10-29  Stipe Tolj  <stolj at kannel.org>
    * gw/meta_data.[ch]: implement meta_data_remove_value() to allow removing values
      from a group.
      
2020-06-19  Stipe Tolj  <stolj at kannel.org>
    * bb_smscconn.c: fix smsc2_remove_smsc() which didn't calibrate the i counter
      when a SMSC connection is removed, so we would step over one index in the list
      without trying to match it's smsc-id, and fix smsc2_add_smsc() for SMSC group
      with multiple instances indicated, this would only start-up one instance, 
      even if several would be configured.
    Thanks to Roberto Facchin for providing the reporting.
    [Msg-Id: <674281A5-E42B-4B2F-9D0C-1C5328787FDB@getmailspring.com>]
    
2020-06-08  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document new 'reroute-receiver-regex' directive.
    * gw/bb_smscconn.c: handle 'reroute-receiver-regex' in route_incoming_to_smsc().
    * gw/smscconn_p.h: add a List in struct smscconn for reroute-receiver-regex.
    * gw/smscconn.c: init and de-init handling of reroute-receiver-regex.
    * gwlib/cfg.def: add directive 'reroute-receiver-regex'.
    This patchset allows defining regex patterns for receiver numbers when doing 
    re-routing of MOs towards MTs.
    
2020-06-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add type 'utf8' to allow simple
      injection of UTF-8 encoded MOs.
      
2020-05-04 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.[ch]: added http PATCH method support

2020-03-30  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_redis.c: fix dlr_redis_update() to get correct DLR entry updates,
      i.e. for intermediate events.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_smpp.c, doc/userguide.xml, gwlib/cfg.def: added new config